--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: CLIENT
 
 on:
   push:
-    branches: [master]
+    branches: [*]
   pull_request:
-    branches: [master]
+    branches: [*]
 
 jobs:
   build_client:
