--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,11 @@ name: CLIENT
 
 on:
   push:
-    branches: [*]
+    branches:
+      - "**"
   pull_request:
-    branches: [*]
+    branches:
+      - "**"
 
 jobs:
   build_client:
