--- a/server/example.env
+++ b/server/example.env
@@ -1,3 +1,2 @@
 PORT=5000
-DATABASE_URI=mongodb+srv://<name>:<password>@cluster0.y0iic.mongodb.net/<cluster>?retryWrites=true&w=majority
-API_KEY=
+API_KEY=leagueoflegendsapikey
