--- a/server/package.json
+++ b/server/package.json
@@ -7,11 +7,14 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "2.3.0",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.27",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4"
+  },
+  "devDependencies": {
+    "@prisma/cli": "2.3.0"
   }
 }
