--- a/server/package.json
+++ b/server/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "@prisma/client": "2.3.0",
     "axios": "^0.19.2",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4"
   },
