--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
+    "react-cool-onclickoutside": "^1.5.5",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-query": "^2.5.11",
