--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-spinners": "^0.9.0",
     "react-toastify": "^6.0.8",
     "styled-components": "^5.1.1",
     "styled-normalize": "^8.0.7"
