--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react-cool-onclickoutside": "^1.5.5",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
+    "react-lazy-load-image-component": "^1.5.0",
     "react-query": "^2.5.11",
     "react-query-devtools": "^2.4.2",
     "react-router": "^5.2.0",
