--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-spinners": "^0.9.0",
+    "react-table": "^7.5.0",
     "react-toastify": "^6.0.8",
     "styled-components": "^5.1.1",
     "styled-normalize": "^8.0.7"
