--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-joi": "^0.3.1",
     "express-rate-limit": "^5.1.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
