--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
     "react-cool-onclickoutside": "^1.5.5",
     "react-dom": "^16.13.1",
