--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,8 +21,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm i
-      - run: npm run build --if-present
+      - run: yarn
+      - run: npm build
   build_server:
     runs-on: ubuntu-latest
     defaults:
@@ -39,5 +39,5 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm i
-      - run: npm run build --if-present
+      - run: yarn
+      - run: pm2 restart Staging_leaguedex
