--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,4 +40,6 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: yarn install --force
+      - run: prisma migrate up --experimental
+      - run: prisma generate
       - run: yarn restart:staging
