--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,6 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: yarn install --force
-      - run: cp ../../server.env ./.env
-      - run: prisma migrate up --experimental
-      - run: prisma generate
+      - run: cp ../../server.env ./server.env
+
       - run: yarn restart:staging
