copy env files, should work.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: yarn install --force
-      - run: cp ../../server.env ./server.env
-
+      - run: cp ../../server.env ./.env
+      - run: cp ../../prisma.env ./prisma/.env
+      - run: prisma migrate up --experimental
+      - run: prisma generate
       - run: yarn restart:staging
