--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: yarn install --force
       - run: yarn run build
-      - run: mv ./build /var/www/html/staging-leaguedex
+      - run: mv ./build/* /var/www/html/staging-leaguedex
   build_server:
     runs-on: self-hosted
     defaults:
