--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -21,9 +21,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Install dependencies
       - run: npm ci
-      - run: npm build
+      - run: npm run build
       - run: rm -r /var/www/html/staging-leaguedex/*
       - run: mv ./build/* /var/www/html/staging-leaguedex
   build_server:
