--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -42,8 +42,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: yarn install --force
+      - run: yarn build
       - run: cp ../../server.env ./src/.env
       - run: cp ../../prisma.env ./prisma/.env
       - run: prisma migrate up --experimental
       - run: prisma generate
-      - run: yarn restart:staging
