--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,14 @@
   "scripts": {
     "dev": "nodemon ./src/index.js",
     "build": "babel -d ./build ./src -s --copy-files",
-    "restart:staging": "pm2 restart staging_leaguedex --update-env"
+    "restart:staging": "pm2 restart staging_leaguedex"
   },
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "2.3.0",
     "axios": "^0.19.2",
+    "babel-plugin-inline-dotenv": "^1.6.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
