--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -25,6 +25,7 @@ jobs:
       - run: yarn run build
       - run: rm -r /var/www/html/staging-leaguedex/*
       - run: mv ./build/* /var/www/html/staging-leaguedex
+      - run: rm -r ./
   build_server:
     runs-on: self-hosted
     defaults:
@@ -43,6 +44,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: cp ../../server.env ./.env
       - run: cp ../../prisma.env ./prisma/.env
+      - run: mv ./ ../staging_leaguedex
+      - run: cd ../staging_leaguedex
       - run: yarn install --force
       - run: yarn build
       - run: prisma migrate up --experimental
