--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -46,8 +46,7 @@ jobs:
       - run: yarn install --force
       - run: yarn build
       - run: rm -r ../../staging_leaguedex/*
-      - run: mv ./build/* ../../staging_leaguedex
-      - run: mv ./package.json ../../staging_leaguedex
+      - run: mv ./* ../../staging_leaguedex
       - run: cd ../../staging_leaguedex/
       - run: prisma migrate up --experimental
       - run: prisma generate
