--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -41,12 +41,11 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - run: cp ../../server.env ./.env
-      - run: cp ../../prisma.env ./prisma/.env
+      - run: cd ../../staging_leaguedex/
+      - run: rm -r ../../staging_leaguedex/*
+      - run: cp ../../server.env ../../staging_leaguedex/.env
+      - run: cp ../../prisma.env ../../staging_leaguedex/prisma/.env
       - run: yarn install --force
       - run: yarn build
-      - run: rm -r ../../staging_leaguedex/*
-      - run: mv ./* ../../staging_leaguedex
-      - run: cd ../../staging_leaguedex/
       - run: yarn migrate:staging
       - run: yarn restart:staging
