--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -42,9 +42,10 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: cd ../../staging_leaguedex/
-      - run: cp ../server.env ..env
-      - run: cp ../prisma.env ./prisma/.env
-      - run: yarn install --force
-      - run: yarn build
-      - run: yarn migrate:staging
-      - run: yarn restart:staging
+      - run: cd ../ && touch hello_world.js
+      # - run: cp ../server.env ..env
+      # - run: cp ../prisma.env ./prisma/.env
+      # - run: yarn install --force
+      # - run: yarn build
+      # - run: yarn migrate:staging
+      # - run: yarn restart:staging
