--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@prisma/cli": "2.3.0",
-    "pm2": "^4.4.0"
+    "pm2": "^4.4.0",
+    "prettier": "2.0.5"
   }
 }
