run prettier on push

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -41,6 +41,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+      - run: cd ../../staging_leaguedex && yarn run:prettier
       - run: rm -r ../../staging_leaguedex/*
       - run: mv ./* ../../staging_leaguedex
       - run: cp ../../server.env ../../staging_leaguedex/.env
