--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "nodemon ./src/index.js",
+    "run:prettier": "prettier --check",
     "restart:staging": "pm2 restart staging_leaguedex",
     "migrate:staging": "prisma migrate up --experimental && prisma generate"
   },
