move prettier files

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -45,6 +45,8 @@ jobs:
       - run: mv ./* ../../staging_leaguedex
       - run: cp ../../server.env ../../staging_leaguedex/.env
       - run: cp ../../prisma.env ../../staging_leaguedex/prisma/.env
+      - run: cp ../../.prettierrc ../../staging_leaguedex/
+      - run: cp ../../.prettierignore ../../staging_leaguedex/
       - run: cd ../../staging_leaguedex && yarn install --force
       - run: cd ../../staging_leaguedex && yarn run:prettier
       - run: cd ../../staging_leaguedex && yarn migrate:staging
