--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@prisma/client": "2.3.0",
     "axios": "^0.19.2",
     "babel-plugin-inline-dotenv": "^1.6.0",
@@ -18,7 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-joi": "^0.3.1",
+    "express-joi-validation": "^4.0.3",
     "express-rate-limit": "^5.1.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
