--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
     "react-cool-onclickoutside": "^1.5.5",
+    "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-lazy-load-image-component": "^1.5.0",
