--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-context-devtool": "^2.0.0",
     "react-cool-onclickoutside": "^1.5.5",
     "react-countup": "^4.3.3",
+    "react-device-detect": "^1.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-lazy-load-image-component": "^1.5.0",
