--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-countup": "^4.3.3",
     "react-device-detect": "^1.13.1",
     "react-dom": "^16.13.1",
+    "react-highlighter": "^0.4.3",
     "react-icons": "^3.10.0",
     "react-lazy-load-image-component": "^1.5.0",
     "react-query": "^2.5.11",
