--- a/package.json
+++ b/package.json
@@ -9,8 +9,5 @@
   "main": "index.js",
   "repository": "https://github.com/donnyroufs/leaguedex-revamp.git",
   "author": "Donny Roufs <iamchets@yahoo.com>",
-  "license": "MIT",
-  "dependencies": {
-    "react-highlighter": "^0.4.3"
-  }
+  "license": "MIT"
 }
