--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,9 @@
     "dev": "nodemon ./src/index.js",
     "run:prettier": "prettier --check ./src",
     "restart:staging": "pm2 restart staging_leaguedex",
-    "migrate:staging": "prisma migrate up --experimental && prisma generate"
+    "migrate:staging": "prisma migrate up --experimental && prisma generate",
+    "restart:prod": "pm2 restart production_leaguedex",
+    "migrate:prod": "prisma migrate up --experimental && prisma generate"
   },
   "main": "index.js",
   "license": "MIT",
