--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-spinners": "^0.9.0",
     "react-table": "^7.5.0",
     "react-toastify": "^6.0.8",
+    "react-tooltip": "^4.2.9",
     "styled-components": "^5.1.1",
     "styled-normalize": "^8.0.7"
   },
