--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   "main": "index.js",
   "repository": "https://github.com/donnyroufs/leaguedex-revamp.git",
   "author": "Donny Roufs <iamchets@yahoo.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "react-helmet": "^6.1.0"
+  }
 }
