--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-countup": "^4.3.3",
     "react-device-detect": "^1.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-highlight-words": "^0.16.0",
     "react-hook-clipboard": "^1.0.0",
     "react-icons": "^3.10.0",
