--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,8 @@
     "react-toastify": "^6.0.8",
     "react-tooltip": "^4.2.9",
     "styled-components": "^5.1.1",
-    "styled-normalize": "^8.0.7"
+    "styled-normalize": "^8.0.7",
+    "use-debounce": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
