--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-hook-clipboard": "^1.0.0",
     "react-icons": "^3.10.0",
     "react-lazy-load-image-component": "^1.5.0",
+    "react-pose": "^4.0.10",
     "react-query": "^2.5.11",
     "react-query-devtools": "^2.4.2",
     "react-router": "^5.2.0",
