added react player, placeholder video

--- a/package.json
+++ b/package.json
@@ -10,5 +10,7 @@
   "repository": "https://github.com/donnyroufs/leaguedex-revamp.git",
   "author": "Donny Roufs <iamchets@yahoo.com>",
   "license": "MIT",
-  "dependencies": {}
+  "dependencies": {
+    "react-player": "^2.6.2"
+  }
 }
