--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,9 +1,10 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Leaguedex",
+  "name": "Leaguedex",
+  "description": "Keep track of your played matchhups in league of legends, and share them with others.",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "icon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
@@ -11,5 +12,5 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#1B2735"
 }
