--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "@prisma/client": "2.4.1",
+    "@sendgrid/mail": "^7.3.0",
     "axios": "^0.19.2",
     "babel-plugin-inline-dotenv": "^1.6.0",
     "bcryptjs": "^2.4.3",
@@ -26,6 +27,7 @@
     "express-joi-validation": "^4.0.3",
     "express-rate-limit": "^5.1.3",
     "jsonwebtoken": "^8.5.1",
+    "mjml": "^4.7.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4"
   },
