mail service added

--- a/server/example.env
+++ b/server/example.env
@@ -1,4 +1,14 @@
+# App
+NODE_ENV=development
 PORT=5000
-API_KEY=leagueoflegendsapikey
+
+# Riot Api key
+API_KEY=
+
+# Auth Secrets 
 ACCESS_TOKEN_SECRET=
 REFRESH_TOKEN_SECRET=
+
+# Mail Service 
+SENDGRID_API_KEY=
+SENDGRID_EMAIL=
