--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^8.5.1",
     "mjml": "^4.7.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.14",
     "nodemon": "^2.0.4"
   },
   "devDependencies": {
