--- a/server/package.json
+++ b/server/package.json
@@ -30,7 +30,8 @@
     "mjml": "^4.7.1",
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.14",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@prisma/cli": "2.4.1",
