add production comment

--- a/server/example.env
+++ b/server/example.env
@@ -9,6 +9,6 @@ API_KEY=
 ACCESS_TOKEN_SECRET=
 REFRESH_TOKEN_SECRET=
 
-# Mail Service 
+# Mail Service  (production)
 SENDGRID_API_KEY=
 SENDGRID_EMAIL=
