--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "express-joi-validation": "^4.0.3",
     "express-rate-limit": "^5.1.3",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "mjml": "^4.7.1",
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.14",
