refactor profiles and improve UX for input fields

--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "js-cookie": "^2.2.1",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-context-devtool": "^2.0.0",
     "react-cool-onclickoutside": "^1.5.5",
